# stem-and-mantle

./: Makefile  Procfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: main.yml
api/: Makefile  pyproject.toml
auth/: login.py  user.py
climbs/: climb.py  constants.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: HardcodedForm.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
rest/: Dockerfile  config.py  database.py  main.py  pyproject.toml
rest/auth/: login.py  user.py
rest/climbs/: climb.py  training_session.py
tests/: test_score.py
