[tool.isort]
profile = "black"

[tool.black]
line_length = 120

[tool.ruff]
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I001",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.poetry]
name = "rest"
version = "0.1.0"
description = ""
authors = ["Jessica Dyer <jessica.dyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
flake8 = "^6.0.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
jwt = "^1.3.1"
asyncpg = "^0.28.0"
email-validator = "^2.0.0.post2"
gunicorn = "^21.2.0"
python-jose = {extras = ["cryptography"], version = "^3.0.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"
pytest = "^7.4.0"